* RC no longer uses the route that invoked the controller to figure out wildcard enclosing resources.

  - this change means that you will no longer get those pesky 'NoRecognizedRoute' errors when your controller
    is invoked by another route, such as a :controller/:action/:id route.

* Further relaxed RC's route pickiness.  If a route is not recognised, construct segments from the params

* Relaxed RC's pickiness about what route was used to invoke a controller.

* Removed deprecation warning from save_resource, and added cautionary notes to the comments instead

* If you use your own Action modules, you can now define a module method #include_actions to do the :only / :except 
  handling yourself.  See Ardes::ResourcesController::IncludeActions.  This change is completely BC, you don't need 
  to do anything to any of your existing action modules. 

* use add_enclosing_resource to add your own enclosing resources if you're skipping load_enclosing_resources [Tom Stuart, Joel Chippindale]

* The reason for the reversion in c21f35c has been fixed.  Thanks Jason Lee for the bug report.

  The problem was that I had changed resource_saved?'s behaviour to *not* saving the model if it had
  already been saved.  In the future resource_saved? will be deprecated, but not yet.

  BTW.  All of these changes to resource_saved? behaviour is aimed at making RC drop in compatible with
  rspec's generated controller specs (try rake spec:generate).
  
  To do that I need the default update action to use :update_attributes. This meant that the old strategy
  of keeping track of saves by using save_resource wont work.  Instead, we keep track by looking at the
  AR's state (see lib/ardes/active_record/saved.rb) which is a far better solution anyway.

* API change: save_resource deprecated

  So save_resource is now deprecated, just use resource.save
  ActiveRecords can now be asked if they are saved?
    