@@ -1,4 +1,4 @@
-Copyright (c) 2007-2009 Ian White - ian.w.white@ardes.com
+Copyright (c) 2007-2009 Ian White - ian.w.white@gmail.com
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
